# serializer version: 1
# name: test_detector[Assembly-0.6.11-inline_assembly_contract.sol]
  list([
    list([
      dict({
        'check': 'assembly',
        'confidence': 'High',
        'description': '''
          GetCode.at(address) (tests/detectors/assembly/0.6.11/inline_assembly_contract.sol#4-18) uses assembly
          	- INLINE ASM (tests/detectors/assembly/0.6.11/inline_assembly_contract.sol#5-17)
  
        ''',
        'elements': list([
          dict({
            'name': 'at',
            'source_mapping': dict({
              'ending_column': 6,
              'filename_absolute': '/GENERIC_PATH',
              'filename_relative': 'tests/detectors/assembly/0.6.11/inline_assembly_contract.sol',
              'filename_short': 'tests/detectors/assembly/0.6.11/inline_assembly_contract.sol',
              'is_dependency': False,
              'length': 707,
              'lines': list([
                4,
                5,
                6,
                7,
                8,
                9,
                10,
                11,
                12,
                13,
                14,
                15,
                16,
                17,
                18,
              ]),
              'start': 94,
              'starting_column': 5,
            }),
            'type': 'function',
            'type_specific_fields': dict({
              'parent': dict({
                'name': 'GetCode',
                'source_mapping': dict({
                  'ending_column': 2,
                  'filename_absolute': '/GENERIC_PATH',
                  'filename_relative': 'tests/detectors/assembly/0.6.11/inline_assembly_contract.sol',
                  'filename_short': 'tests/detectors/assembly/0.6.11/inline_assembly_contract.sol',
                  'is_dependency': False,
                  'length': 731,
                  'lines': list([
                    3,
                    4,
                    5,
                    6,
                    7,
                    8,
                    9,
                    10,
                    11,
                    12,
                    13,
                    14,
                    15,
                    16,
                    17,
                    18,
                    19,
                  ]),
                  'start': 72,
                  'starting_column': 1,
                }),
                'type': 'contract',
              }),
              'signature': 'at(address)',
            }),
          }),
          dict({
            'name': '',
            'source_mapping': dict({
              'ending_column': 10,
              'filename_absolute': '/GENERIC_PATH',
              'filename_relative': 'tests/detectors/assembly/0.6.11/inline_assembly_contract.sol',
              'filename_short': 'tests/detectors/assembly/0.6.11/inline_assembly_contract.sol',
              'is_dependency': False,
              'length': 622,
              'lines': list([
                5,
                6,
                7,
                8,
                9,
                10,
                11,
                12,
                13,
                14,
                15,
                16,
                17,
              ]),
              'start': 173,
              'starting_column': 9,
            }),
            'type': 'node',
            'type_specific_fields': dict({
              'parent': dict({
                'name': 'at',
                'source_mapping': dict({
                  'ending_column': 6,
                  'filename_absolute': '/GENERIC_PATH',
                  'filename_relative': 'tests/detectors/assembly/0.6.11/inline_assembly_contract.sol',
                  'filename_short': 'tests/detectors/assembly/0.6.11/inline_assembly_contract.sol',
                  'is_dependency': False,
                  'length': 707,
                  'lines': list([
                    4,
                    5,
                    6,
                    7,
                    8,
                    9,
                    10,
                    11,
                    12,
                    13,
                    14,
                    15,
                    16,
                    17,
                    18,
                  ]),
                  'start': 94,
                  'starting_column': 5,
                }),
                'type': 'function',
                'type_specific_fields': dict({
                  'parent': dict({
                    'name': 'GetCode',
                    'source_mapping': dict({
                      'ending_column': 2,
                      'filename_absolute': '/GENERIC_PATH',
                      'filename_relative': 'tests/detectors/assembly/0.6.11/inline_assembly_contract.sol',
                      'filename_short': 'tests/detectors/assembly/0.6.11/inline_assembly_contract.sol',
                      'is_dependency': False,
                      'length': 731,
                      'lines': list([
                        3,
                        4,
                        5,
                        6,
                        7,
                        8,
                        9,
                        10,
                        11,
                        12,
                        13,
                        14,
                        15,
                        16,
                        17,
                        18,
                        19,
                      ]),
                      'start': 72,
                      'starting_column': 1,
                    }),
                    'type': 'contract',
                  }),
                  'signature': 'at(address)',
                }),
              }),
            }),
          }),
        ]),
        'first_markdown_element': 'tests/detectors/assembly/0.6.11/inline_assembly_contract.sol#L4-L18',
        'id': '00e51f7f223289ebaad73cd6e77329b37ff5be360d9a682614cb6b72b8e3d9b4',
        'impact': 'Informational',
        'markdown': '''
          [GetCode.at(address)](tests/detectors/assembly/0.6.11/inline_assembly_contract.sol#L4-L18) uses assembly
          	- [INLINE ASM](tests/detectors/assembly/0.6.11/inline_assembly_contract.sol#L5-L17)
  
        ''',
      }),
    ]),
  ])
# ---
# name: test_detector[Assembly-0.6.11-inline_assembly_library.sol]
  list([
    list([
      dict({
        'check': 'assembly',
        'confidence': 'High',
        'description': '''
          VectorSum.sumPureAsm(uint256[]) (tests/detectors/assembly/0.6.11/inline_assembly_library.sol#23-45) uses assembly
          	- INLINE ASM (tests/detectors/assembly/0.6.11/inline_assembly_library.sol#24-44)
  
        ''',
        'elements': list([
          dict({
            'name': 'sumPureAsm',
            'source_mapping': dict({
              'ending_column': 6,
              'filename_absolute': '/GENERIC_PATH',
              'filename_relative': 'tests/detectors/assembly/0.6.11/inline_assembly_library.sol',
              'filename_short': 'tests/detectors/assembly/0.6.11/inline_assembly_library.sol',
              'is_dependency': False,
              'length': 761,
              'lines': list([
                23,
                24,
                25,
                26,
                27,
                28,
                29,
                30,
                31,
                32,
                33,
                34,
                35,
                36,
                37,
                38,
                39,
                40,
                41,
                42,
                43,
                44,
                45,
              ]),
              'start': 911,
              'starting_column': 5,
            }),
            'type': 'function',
            'type_specific_fields': dict({
              'parent': dict({
                'name': 'VectorSum',
                'source_mapping': dict({
                  'ending_column': 2,
                  'filename_absolute': '/GENERIC_PATH',
                  'filename_relative': 'tests/detectors/assembly/0.6.11/inline_assembly_library.sol',
                  'filename_short': 'tests/detectors/assembly/0.6.11/inline_assembly_library.sol',
                  'is_dependency': False,
                  'length': 1602,
                  'lines': list([
                    3,
                    4,
                    5,
                    6,
                    7,
                    8,
                    9,
                    10,
                    11,
                    12,
                    13,
                    14,
                    15,
                    16,
                    17,
                    18,
                    19,
                    20,
                    21,
                    22,
                    23,
                    24,
                    25,
                    26,
                    27,
                    28,
                    29,
                    30,
                    31,
                    32,
                    33,
                    34,
                    35,
                    36,
                    37,
                    38,
                    39,
                    40,
                    41,
                    42,
                    43,
                    44,
                    45,
                    46,
                  ]),
                  'start': 72,
                  'starting_column': 1,
                }),
                'type': 'contract',
              }),
              'signature': 'sumPureAsm(uint256[])',
            }),
          }),
          dict({
            'name': '',
            'source_mapping': dict({
              'ending_column': 10,
              'filename_absolute': '/GENERIC_PATH',
              'filename_relative': 'tests/detectors/assembly/0.6.11/inline_assembly_library.sol',
              'filename_short': 'tests/detectors/assembly/0.6.11/inline_assembly_library.sol',
              'is_dependency': False,
              'length': 671,
              'lines': list([
                24,
                25,
                26,
                27,
                28,
                29,
                30,
                31,
                32,
                33,
                34,
                35,
                36,
                37,
                38,
                39,
                40,
                41,
                42,
                43,
                44,
              ]),
              'start': 995,
              'starting_column': 9,
            }),
            'type': 'node',
            'type_specific_fields': dict({
              'parent': dict({
                'name': 'sumPureAsm',
                'source_mapping': dict({
                  'ending_column': 6,
                  'filename_absolute': '/GENERIC_PATH',
                  'filename_relative': 'tests/detectors/assembly/0.6.11/inline_assembly_library.sol',
                  'filename_short': 'tests/detectors/assembly/0.6.11/inline_assembly_library.sol',
                  'is_dependency': False,
                  'length': 761,
                  'lines': list([
                    23,
                    24,
                    25,
                    26,
                    27,
                    28,
                    29,
                    30,
                    31,
                    32,
                    33,
                    34,
                    35,
                    36,
                    37,
                    38,
                    39,
                    40,
                    41,
                    42,
                    43,
                    44,
                    45,
                  ]),
                  'start': 911,
                  'starting_column': 5,
                }),
                'type': 'function',
                'type_specific_fields': dict({
                  'parent': dict({
                    'name': 'VectorSum',
                    'source_mapping': dict({
                      'ending_column': 2,
                      'filename_absolute': '/GENERIC_PATH',
                      'filename_relative': 'tests/detectors/assembly/0.6.11/inline_assembly_library.sol',
                      'filename_short': 'tests/detectors/assembly/0.6.11/inline_assembly_library.sol',
                      'is_dependency': False,
                      'length': 1602,
                      'lines': list([
                        3,
                        4,
                        5,
                        6,
                        7,
                        8,
                        9,
                        10,
                        11,
                        12,
                        13,
                        14,
                        15,
                        16,
                        17,
                        18,
                        19,
                        20,
                        21,
                        22,
                        23,
                        24,
                        25,
                        26,
                        27,
                        28,
                        29,
                        30,
                        31,
                        32,
                        33,
                        34,
                        35,
                        36,
                        37,
                        38,
                        39,
                        40,
                        41,
                        42,
                        43,
                        44,
                        45,
                        46,
                      ]),
                      'start': 72,
                      'starting_column': 1,
                    }),
                    'type': 'contract',
                  }),
                  'signature': 'sumPureAsm(uint256[])',
                }),
              }),
            }),
          }),
        ]),
        'first_markdown_element': 'tests/detectors/assembly/0.6.11/inline_assembly_library.sol#L23-L45',
        'id': '5964c7440a9efb78bf78544bcdc60c789e3d9dff73438108bcb07ac98d60876a',
        'impact': 'Informational',
        'markdown': '''
          [VectorSum.sumPureAsm(uint256[])](tests/detectors/assembly/0.6.11/inline_assembly_library.sol#L23-L45) uses assembly
          	- [INLINE ASM](tests/detectors/assembly/0.6.11/inline_assembly_library.sol#L24-L44)
  
        ''',
      }),
      dict({
        'check': 'assembly',
        'confidence': 'High',
        'description': '''
          VectorSum.sumAsm(uint256[]) (tests/detectors/assembly/0.6.11/inline_assembly_library.sol#14-20) uses assembly
          	- INLINE ASM (tests/detectors/assembly/0.6.11/inline_assembly_library.sol#16-18)
  
        ''',
        'elements': list([
          dict({
            'name': 'sumAsm',
            'source_mapping': dict({
              'ending_column': 6,
              'filename_absolute': '/GENERIC_PATH',
              'filename_relative': 'tests/detectors/assembly/0.6.11/inline_assembly_library.sol',
              'filename_short': 'tests/detectors/assembly/0.6.11/inline_assembly_library.sol',
              'is_dependency': False,
              'length': 254,
              'lines': list([
                14,
                15,
                16,
                17,
                18,
                19,
                20,
              ]),
              'start': 574,
              'starting_column': 5,
            }),
            'type': 'function',
            'type_specific_fields': dict({
              'parent': dict({
                'name': 'VectorSum',
                'source_mapping': dict({
                  'ending_column': 2,
                  'filename_absolute': '/GENERIC_PATH',
                  'filename_relative': 'tests/detectors/assembly/0.6.11/inline_assembly_library.sol',
                  'filename_short': 'tests/detectors/assembly/0.6.11/inline_assembly_library.sol',
                  'is_dependency': False,
                  'length': 1602,
                  'lines': list([
                    3,
                    4,
                    5,
                    6,
                    7,
                    8,
                    9,
                    10,
                    11,
                    12,
                    13,
                    14,
                    15,
                    16,
                    17,
                    18,
                    19,
                    20,
                    21,
                    22,
                    23,
                    24,
                    25,
                    26,
                    27,
                    28,
                    29,
                    30,
                    31,
                    32,
                    33,
                    34,
                    35,
                    36,
                    37,
                    38,
                    39,
                    40,
                    41,
                    42,
                    43,
                    44,
                    45,
                    46,
                  ]),
                  'start': 72,
                  'starting_column': 1,
                }),
                'type': 'contract',
              }),
              'signature': 'sumAsm(uint256[])',
            }),
          }),
          dict({
            'name': '',
            'source_mapping': dict({
              'ending_column': 14,
              'filename_absolute': '/GENERIC_PATH',
              'filename_relative': 'tests/detectors/assembly/0.6.11/inline_assembly_library.sol',
              'filename_short': 'tests/detectors/assembly/0.6.11/inline_assembly_library.sol',
              'is_dependency': False,
              'length': 104,
              'lines': list([
                16,
                17,
                18,
              ]),
              'start': 708,
              'starting_column': 13,
            }),
            'type': 'node',
            'type_specific_fields': dict({
              'parent': dict({
                'name': 'sumAsm',
                'source_mapping': dict({
                  'ending_column': 6,
                  'filename_absolute': '/GENERIC_PATH',
                  'filename_relative': 'tests/detectors/assembly/0.6.11/inline_assembly_library.sol',
                  'filename_short': 'tests/detectors/assembly/0.6.11/inline_assembly_library.sol',
                  'is_dependency': False,
                  'length': 254,
                  'lines': list([
                    14,
                    15,
                    16,
                    17,
                    18,
                    19,
                    20,
                  ]),
                  'start': 574,
                  'starting_column': 5,
                }),
                'type': 'function',
                'type_specific_fields': dict({
                  'parent': dict({
                    'name': 'VectorSum',
                    'source_mapping': dict({
                      'ending_column': 2,
                      'filename_absolute': '/GENERIC_PATH',
                      'filename_relative': 'tests/detectors/assembly/0.6.11/inline_assembly_library.sol',
                      'filename_short': 'tests/detectors/assembly/0.6.11/inline_assembly_library.sol',
                      'is_dependency': False,
                      'length': 1602,
                      'lines': list([
                        3,
                        4,
                        5,
                        6,
                        7,
                        8,
                        9,
                        10,
                        11,
                        12,
                        13,
                        14,
                        15,
                        16,
                        17,
                        18,
                        19,
                        20,
                        21,
                        22,
                        23,
                        24,
                        25,
                        26,
                        27,
                        28,
                        29,
                        30,
                        31,
                        32,
                        33,
                        34,
                        35,
                        36,
                        37,
                        38,
                        39,
                        40,
                        41,
                        42,
                        43,
                        44,
                        45,
                        46,
                      ]),
                      'start': 72,
                      'starting_column': 1,
                    }),
                    'type': 'contract',
                  }),
                  'signature': 'sumAsm(uint256[])',
                }),
              }),
            }),
          }),
        ]),
        'first_markdown_element': 'tests/detectors/assembly/0.6.11/inline_assembly_library.sol#L14-L20',
        'id': 'a8d71513166310212c49c4edecbdf8fbc3040b1cb5b5756f0ad1971ae7d4cdb1',
        'impact': 'Informational',
        'markdown': '''
          [VectorSum.sumAsm(uint256[])](tests/detectors/assembly/0.6.11/inline_assembly_library.sol#L14-L20) uses assembly
          	- [INLINE ASM](tests/detectors/assembly/0.6.11/inline_assembly_library.sol#L16-L18)
  
        ''',
      }),
    ]),
  ])
# ---
